--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
   ],
   "dependencies": {
     "@sanity/base": "^2.13.1",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.13.0",
     "@sanity/components": "^2.13.0",
     "@sanity/core": "^2.13.1",
     "@sanity/default-layout": "^2.13.1",
     "@sanity/default-login": "^2.13.1",
     "@sanity/desk-tool": "^2.13.1",
+    "@sanity/image-url": "^0.140.22",
     "@sanity/vision": "^2.13.1",
     "prop-types": "^15.7",
     "react": "^17.0",
