--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/material": "^5.0.3",
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^2.19.0",
     "@sanity/image-url": "^1.0.1",
