--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "sweetalert2": "^11.1.0",
+    "swiper": "^7.3.1",
+    "swiper-react": "^1.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
