--- a/backend/package.json
+++ b/backend/package.json
@@ -19,13 +19,15 @@
     "@sanity/client": "^2.13.0",
     "@sanity/components": "^2.13.0",
     "@sanity/core": "^2.13.1",
+    "@sanity/dashboard": "^2.23.0",
     "@sanity/default-layout": "^2.13.1",
     "@sanity/default-login": "^2.13.1",
     "@sanity/desk-tool": "^2.13.1",
     "@sanity/image-url": "^0.140.22",
-    "@sanity/vision": "^2.13.1",
     "prop-types": "^15.7",
     "react": "^17.0",
-    "react-dom": "^17.0"
+    "react-dom": "^17.0",
+    "react-icons": "^4.3.1",
+    "styled-components": "^5.3.3"
   }
 }
