--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "emailjs-com": "^3.2.0",
+    "gsap": "^3.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gsap": "^3.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.5.1",
+    "react-swipeable-views": "^0.14.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "sweetalert2": "^11.1.0",
